docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
/* ... */
.path-user .col-md-6:first-child() {
    padding-left: 0px!important;
}
.view-kurser-relateret-til-laere .views-field-title a {
        padding: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 1px solid;
    margin-bottom: 10px;
}
@media only screen and (min-width: 980px) {
//.layout--fixed-header {
//    overflow: hidden!important;
//}    
}

.path-taxonomy .lc-btn-box {display: none;}
.path-taxonomy .lc-contact-box { display: none; }
.path-taxonomy .lc-price-box { display: none; }
@media only screen and (max-width: 1130px) {
    .vih_class_table_teaser .field--name-field-vih-class-image img {
        min-width: 150%!important;
    }
    .field--name-field-vih-class-image { overflow: hidden!important; }
}
@media only screen and (max-width: 870px) {
    .modal-course-content-teaser-wrapper {
        display: flex;
        flex-direction: column;
    }
    .modal-course-content-teaser-wrapper .col-xs-6 {
        width: 100%;
    }
    .modal-course-content-teaser-wrapper .field--type-string {
    margin: 20px;
    padding-bottom: 10px;
    }
    .panel-title a {
        text-align: left;
    }
    .modal-content p {
        text-align: left;
    }
    .modal-body {
        padding: 40px!important;
        padding-right: 40px!important;
    }
    .page-node-type-vih-long-cource article .table-bordered tr {
        display: flex;
        flex-direction: column;
    }
    .field--name-field-vih-user-photo img {
        min-width: 100%;
    }
    .breadcrumb li, .breadcrumb li a {
        width: 100%;
        font-size: 12px!important;
        display: flex;
        justify-content: center;
        align-items: center;
        font-weight: bold;
    }
    .breadcrumb li + li:before {
        height: 100%!important;
    margin-top: -28px!important;
            border-width: 30px!important;
    }
    .breadcrumb {
        display: flex!important;
        flex-direction: row;
        max-width: 450px;
    }
    .breadcrumb li:first-child a:before {
        padding-right: 10px;
    }
    header .layout__header-row {
            width: 100%!important;
    display: flex!important;
    flex-direction: row!important;
    }
}
//  ***********************************

